border alignments fixed on the contact and portfolio component

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -2,7 +2,7 @@
     
    color: #ababab;
    height: 100%;
-   margin: 0;
+   margin: 2px;
    
  }
  
