--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -102,7 +102,7 @@ form btn2{
    border: 3px solid transparent;
    background-size: 200% 100%;
    animation: moveGradient 2s linear infinite;
-   margin: 1.5 rem;
+   margin: 1.3rem;
    
     
  }
