--- a/src/components/Portfolio/portfolio.css
+++ b/src/components/Portfolio/portfolio.css
@@ -1,8 +1,9 @@
 #portfolio{
    padding: 50px 0;
-   margin: 50px;
+   margin: 1.5rem;
    background-color: rgb(28, 22, 34);
    z-index: 0;
+
    
 }
 
