--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -45,6 +45,6 @@
  @media only screen and (max-width: 320px) {
    .btn {
      padding: 5px 0;
-     width: 100%;
+     
    }
  }
